# git-up

./: Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
pkg/brew/: git-up.rb
src/: git.rs  main.rs
