[package]
name = "git-up"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "Git up command to fetch and update all local branches that track remotes."
repository = "https://github.com/samandmoore/git-up"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
colored = "2.1.0"
env_logger = "0.11.3"
log = "0.4.21"
tap = "1.0.1"
