[package]
name = "git-up"
version = "0.2.0"
edition = "2024"
license-file = "LICENSE"
description = "Git up command to fetch and update all local branches that track remotes."
repository = "https://github.com/samandmoore/git-up"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.54", features = ["cargo"] }
anyhow = "1.0.100"
colored = "3.1.1"
env_logger = "0.11.8"
log = "0.4.29"
tap = "1.0.1"
git-proc = "0.0.1"
cmd-proc = "0.1.0"
